Unbold timer font

--- a/Assignment8/Assignment8/MainWindow.xaml
+++ b/Assignment8/Assignment8/MainWindow.xaml
@@ -41,7 +41,7 @@
             VerticalAlignment="Center"
             TextWrapping="Wrap"
             Foreground="#eeeeee"
-            FontWeight="Bold"
+            FontWeight="DemiBold"
             FontSize="60"
             />
         <Button 
