--- a/Assignment9/Assignment9/MainWindow.xaml
+++ b/Assignment9/Assignment9/MainWindow.xaml
@@ -9,124 +9,90 @@
         Title="MainWindow" Height="450" Width="800">
 
     <Window.Resources>
-        <DataTemplate x:Key="ContactDetailsTemplate" DataType="{x:Type local:Contact}">
-            <StackPanel>
-                <TextBlock Text="First Name">
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding FirstName}" Value="">
-                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-                <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}">
-                    <TextBox.Style>
-                        <Style TargetType="TextBox">
-                            <Style.Triggers>
-                                <Trigger  Property="Text" Value="">
-                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBox.Style>
-                </TextBox>
-                <TextBlock Text="Last Name">
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding LastName}" Value="">
-                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-                <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}">
-                    <TextBox.Style>
-                        <Style TargetType="TextBox">
-                            <Style.Triggers>
-                                <Trigger  Property="Text" Value="">
-                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBox.Style>
-                </TextBox>
-                <TextBlock Text="Phone Number">
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding PhoneNumber}" Value="">
-                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-                <TextBox Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}">
-                    <TextBox.Style>
-                        <Style TargetType="TextBox">
-                            <Style.Triggers>
-                                <Trigger  Property="Text" Value="">
-                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBox.Style>
-                </TextBox>
-                <TextBlock Text="Email Address">
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding EmailAddress}" Value="">
-                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-                <TextBox Text="{Binding EmailAddress, UpdateSourceTrigger=PropertyChanged}">
-                    <TextBox.Style>
-                        <Style TargetType="TextBox">
-                            <Style.Triggers>
-                                <Trigger  Property="Text" Value="">
-                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBox.Style>
-                </TextBox>
-                <TextBlock Text="Twitter Name">
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding TwitterName}" Value="">
-                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-                <TextBox Text="{Binding TwitterName, UpdateSourceTrigger=PropertyChanged}">
-                    <TextBox.Style>
-                        <Style TargetType="TextBox">
-                            <Style.Triggers>
-                                <Trigger  Property="Text" Value="">
-                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBox.Style>
-                </TextBox>
 
-                
+        <local:BoolToEditSave x:Key="BoolConverter"/>
+        <local:BoolToVisConverter x:Key="BoolToVisConverter"/>
+        <local:InverseBoolToVisConverter x:Key="InverseBoolToVisConverter"/>
+
+        <DataTemplate x:Key="EditContactDetailsTemplate" DataType="{x:Type local:Contact}">
+            <StackPanel>
+                <TextBlock Text="First Name"/>
+                <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBlock Text="Last Name"/>
+                <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBlock Text="Phone Number"/>
+                <TextBox Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBlock Text="Email Address"/>
+                <TextBox Text="{Binding EmailAddress, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBlock Text="Twitter Name"/>
+                <TextBox Text="{Binding TwitterName, UpdateSourceTrigger=PropertyChanged}"/>
                 <TextBlock Text="Last Modified"/>
                 <TextBlock Text="{Binding LastModified, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </DataTemplate>
+
+        <DataTemplate x:Key="ContactDetailsTemplate" DataType="{x:Type local:Contact}">
+            <StackPanel>
+                <TextBlock Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, StringFormat=First Name: {0}}">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Style.Triggers>
+                                <Trigger  Property="Text" Value="First Name: ">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+                <TextBlock Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged, StringFormat=Last Name: {0}}">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Style.Triggers>
+                                <Trigger  Property="Text" Value="Last Name: ">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+                <TextBlock Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged, StringFormat=Phone Number: {0}}">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Style.Triggers>
+                                <Trigger  Property="Text" Value="Phone Number: ">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+                <TextBlock Text="{Binding EmailAddress, UpdateSourceTrigger=PropertyChanged, StringFormat=Email Address: {0}}">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Style.Triggers>
+                                <Trigger  Property="Text" Value="Email Address: ">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+                <TextBlock Text="{Binding TwitterName, UpdateSourceTrigger=PropertyChanged, StringFormat=Twitter Name: {0}}">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Style.Triggers>
+                                <Trigger  Property="Text" Value="Twitter Name: ">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+                <TextBlock Text="{Binding LastModified, UpdateSourceTrigger=PropertyChanged, StringFormat=Last Modified: {0}}"/>
+            </StackPanel>
+        </DataTemplate>
+        
+        
 
         <DataTemplate x:Key="ContactListTemplate" DataType="{x:Type local:Contact}">
             <Grid>
@@ -143,9 +109,10 @@
                         </MultiBinding>
                     </TextBlock.Text>
                 </TextBlock>
-               
+
             </Grid>
         </DataTemplate>
+
     </Window.Resources>
         
     <Grid>
@@ -158,20 +125,56 @@
                  SelectedItem="{Binding SelectedContact}"
                  ItemTemplate="{StaticResource ContactListTemplate}"/>
 
+        
         <Grid Grid.Column="1">
-            <ContentControl Content="{Binding SelectedContact}"
-                            ContentTemplate="{StaticResource ContactDetailsTemplate}">
-                <ContentControl.Style>
-                    <Style TargetType="ContentControl">
-                        <Style.Triggers>
-                            <Trigger  Property="Content" Value="{x:Null}">
-                                <Setter Property="Visibility" Value="Collapsed"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </ContentControl.Style>
-            </ContentControl>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <Button Command="{Binding EditCommand}" Content="{Binding Edit, Converter={StaticResource BoolConverter}}">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Style.Triggers>
+                                <DataTrigger  Binding="{Binding SelectedContact}" Value="{x:Null}">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+                
+                <ContentControl Grid.Row="1"
+                                Content="{Binding SelectedContact}"
+                                ContentTemplate="{StaticResource ContactDetailsTemplate}"
+                                Visibility="{Binding Edit, Converter={StaticResource InverseBoolToVisConverter}}">
+                    <ContentControl.Style>
+                        <Style TargetType="ContentControl">
+                            <Style.Triggers>
+                                <Trigger  Property="Content" Value="{x:Null}">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ContentControl.Style>
+                </ContentControl>
 
+                <ContentControl Grid.Row="1"
+                                Content="{Binding SelectedContact}"
+                                ContentTemplate="{StaticResource EditContactDetailsTemplate}"
+                                Visibility="{Binding Edit, Converter={StaticResource BoolToVisConverter}}">
+                    <ContentControl.Style>
+                        <Style TargetType="ContentControl">
+                            <Style.Triggers>
+                                <Trigger  Property="Content" Value="{x:Null}">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ContentControl.Style>
+                </ContentControl>
+            </Grid>
         </Grid>
+        
     </Grid>
 </Window>
